# GHEX

./: .gitignore  CMakeLists.txt
bindings/python/: pyproject.toml  setup.cfg  setup.py
bindings/python/cpp/: prepare_cpp.py
bindings/python/cpp/_templates/: type_list.hpp.jinja
bindings/python/cpp/include/ghex/bindings/python/: type_list.hpp
bindings/python/cpp/include/ghex/bindings/python/types/: buffer_info.hpp  communication_handle.hpp  communication_object.hpp  pattern.hpp
bindings/python/cpp/include/ghex/bindings/python/types/common/: coordinate.hpp
bindings/python/cpp/include/ghex/bindings/python/types/structured/regular/: domain_descriptor.hpp  field_descriptor.hpp  halo_generator.hpp
bindings/python/cpp/include/ghex/bindings/python/types/transport_layer/: communicator.hpp  context.hpp
bindings/python/cpp/src/: ghex.cpp  pattern.cpp
bindings/python/cpp/src/types/: buffer_info.cpp  communication_handle.cpp  communication_object.cpp  pattern.cpp
bindings/python/cpp/src/types/common/: coordinate.cpp
bindings/python/cpp/src/types/structured/regular/: domain_descriptor.cpp  field_descriptor.cpp  halo_generator.cpp
bindings/python/cpp/src/types/transport_layer/: communicator.cpp  context.cpp
bindings/python/src/ghex/: __init__.py  communication_object.py  pattern.py
bindings/python/src/ghex/structured/regular/: __init__.py  domain_descriptor.py  field_descriptor.py  halo_generator.py
bindings/python/src/ghex/transport_layer/: context.py
bindings/python/src/ghex/utils/: __init__.py  architecture.py  cpp_wrapper_utils.py  index_space.py  setup.py
cmake/: ghex_compile_options.cmake  ghex_device.cmake
include/ghex/: arch_list.hpp  communication_object_2.hpp
