[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools>=61.0.0', 'wheel', 'pybind11>=2.6']

[project]
authors = [{name = 'ETH Zurich', email = 'till.ehrengruber@cscs.ch'}]  # todo: contributor list in ghex?
classifiers = [
    'Development Status :: 0 - Alpha',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
    'Operating System :: POSIX',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Scientific/Engineering :: Distributed Computing'
]
dependencies = ['mpi4py >= 3.0', 'numpy >= 1.17']
description = 'Python bindings to GHex: Generic exascale-ready library for halo-exchange operations on variety of grids/meshes.'
keywords = ['ghex']
license = {text = 'BSD-3-Clause'}
name = 'ghex'
readme = {file = 'README.md', content-type = 'text/markdown'}
requires-python = '>= 3.8'
version = "0.0"

[project.optional-dependencies]
testing = ['pytest ~= 6.1']

[project.urls]
Source = 'https://github.com/GridTools/GHEX'

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.gt_cache
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''
include = '\.pyi?$'
line-length = 100
target-version = ['py38']

[tool.setuptools]
platforms = ['Linux', 'Mac']

[tool.setuptools.packages]
find = {namespaces = false, where = ['src']}
